--- a/index.html
+++ b/index.html
@@ -424,6 +424,7 @@
                                 <a href="#" class="faq"> FAQ </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                 <hr style="width: 300px;">
                                 <p>Copyright 2021 © UX Themes</p>
+                                <p>Edited by priyanandini pasupuleti</p>
                             </div>
                             <head>
                                 <style>
